--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/menu/menu.xhtml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/menu/menu.xhtml
@@ -32,10 +32,15 @@
                 </p:column>
                 <p:column>
                     <p:submenu label="Mis tickets">
-                        <p:menuitem value="Tickets por estados" ajax="false" action="misTicketsPorEstado?faces-redirect=true"><f:param name="tipo" value="estados"></f:param></p:menuitem>
-                        <p:menuitem value="Tickets por colas" ajax="false" action="misTicketsPorColas?faces-redirect=true"><f:param name="tipo" value="colas"></f:param></p:menuitem>
-                        <p:menuitem value="Tickets por prioridad" ajax="false" action="mistickets?faces-redirect=true"><f:param name="tipo" value="prioridad"></f:param></p:menuitem>
+                        <p:menuitem value="Tickets por estados" ajax="false" action="misTicketsPorEstado?faces-redirect=true"></p:menuitem>
+                        <p:menuitem value="Tickets por colas" ajax="false" action="misTicketsPorColas?faces-redirect=true"></p:menuitem>
+                        <p:menuitem value="Tickets por prioridad" ajax="false" action="misTicketsPorPrioridad?faces-redirect=true"></p:menuitem>
                         <p:menuitem value="Crear Ticket de Soporte" ajax="false" action="crearTicket?faces-redirect=true"></p:menuitem>
+                    </p:submenu>
+                </p:column>
+                <p:column>
+                    <p:submenu label="Tareas Programadas" rendered="#{login.usuarioActual.grupoid.permisos.administra eq true}">
+                        <p:menuitem value="Ver Tareas" ajax="false" action="listaDeTareasProgramadas?faces-redirect=true"></p:menuitem>
                     </p:submenu>
                 </p:column>
             </p:submenu>
