--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/crearTicket.xhtml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/crearTicket.xhtml
@@ -10,7 +10,7 @@
         <f:view contentType="text/html">
             <h:head />
             <h:form enctype="multipart/form-data">
-                <p:growl id="growl" life="2000"></p:growl>
+<!--                <p:growl id="growl" life="2000"></p:growl>-->
                 <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
                     <p:graphicImage library="images" name="ajax_loader.gif" />
                 </p:dialog>
@@ -84,7 +84,7 @@
                         <f:facet name="footer">
                             <p:row>
                                 <p:column>
-                                    <p:commandButton value="Crear Ticket" id="botonCrear" icon="ui-icon-disk" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"  actionListener="#{crearTicketBean.crearTicket}" update="growl @form"></p:commandButton>
+                                    <p:commandButton value="Crear Ticket" id="botonCrear" icon="ui-icon-disk" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"  actionListener="#{crearTicketBean.crearTicket}" update=":growl @form"></p:commandButton>
                                 </p:column>
                                 <p:column>
                                     <p:commandButton value="Cancelar" id="botonCancelar" icon="ui-icon-close" immediate="true" action="welcome?faces-redirect=true"></p:commandButton> 
