--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/test/test.xhtml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/test/test.xhtml
@@ -12,14 +12,10 @@
            <h:body>
                <h:form>
                    <p:panel menuTitle="Test">
-                       <p:button value="Test" outcome="/test/test"></p:button>
+                       <h1>Entro a página de prueba</h1>
                    </p:panel>
-                   <h:outputText>Nothing yet!</h:outputText>
                </h:form>
            </h:body>
        </f:view>
-    </ui:define>
-    <ui:define name="footer">
-        Nothing Here...
     </ui:define>
 </ui:composition>
